Terraform-Modules-Multi-Environments/Terraform-Modules-Multi-Environments/modules/vpc/main.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.cidr_vpc
  tags = {
    Name = var.vpc_name
  }
}



resource "aws_subnet" "subnet" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = var.cidr_subnet
  map_public_ip_on_launch   = true
  availability_zone         = var.azone 

  tags = {
    Name = var.subnet_name
  }
}

resource "aws_security_group" "security_group" {
  vpc_id   = aws_vpc.vpc.id
  name     = var.sg_name

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.sg_name
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "My-IGW"
  }
}

resource "aws_route_table" "route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "MyRouteTable"
  }
}

resource "aws_route_table_association" "route_table_association" {
  subnet_id        = aws_subnet.subnet.id
  route_table_id   = aws_route_table.route_table.id
}
